# contextwallet

./: .env.example  .gitignore  README.md  contract.py  db.py  demo.py  embed.py  locators.py  ontology.yaml  package-lock.json  package.json  pyproject.toml  take-screenshot.js
audit/: __init__.py  sink.py
fetch/: __init__.py  adapter.py  cache.py  conflict.py  join.py  ladder.py  source_reader.py
onboarding/: __init__.py  classify.py  control_plane.py  onboard.py  ontology_router.py  reader_gate.py
resolution/: __init__.py  capability.py  descent.py  gate.py  projection.py  resolver.py
scripts/: fetch_model.py
seed/: crm_a.csv  crm_b.csv  make_chat_db.py  make_seed.py
seed/transcripts/: call_c1.txt
tests/: test_descent.py  test_e2e_moneyshot.py  test_embed_shared.py  test_integration_fixes.py  test_locators.py  test_unit1.py  test_unit2.py  test_unit3.py  test_unit4.py  test_unit5.py  test_wallet_api.py  test_wallet_phase1.py
twin_core/: __init__.py  inversion.py  masters.py  store.py
wallet/: README.md  adjudicators.py  api.py  chat.py  fetch.py  multi_reader.py  registry.py  setup.py  smoke.sh  sqlite_reader.py  wallet_join.py  wallet_projector.py
wallet/ui/: index.html  package-lock.json  package.json  vite.config.ts
wallet/ui/src/: App.tsx  api.ts  styles.css  types.ts
wallet/ui/src/components/: Access.tsx  Cards.tsx  Chat.tsx  Connectors.tsx  GraphView.tsx  Header.tsx
