[project]
name = "context-twin"
version = "0.1.0"
description = "Context Twin — a governed digital twin: typed reference-cells that hold refs and types, never values."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "fastembed",
    "anthropic",
    "numpy",
    "PyYAML",
    "fastapi",
    "uvicorn[standard]",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twin_core", "onboarding", "resolution", "fetch", "audit", "wallet"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
